# BBot-Graia

./: .gitignore  bot.py  main.py  pyproject.toml  readme.md  requirements.txt
core/: bot_config.py  log.py
function/command/admin/: add.py  remove.py
function/command/configure/: atall.py
