[tool.poetry]
name = "bbot"
version = "1.1.0"
description = "一个用于 QQ 群内高效推送哔哩哔哩 UP 动态及直播的机器人"
authors = ["djkcyl <cyl@cyllive.cn>"]
license = "AGPL3.0"

[tool.poetry.dependencies]
python = "^3.9"
amiyabot = {path = "amiyabot-1.1.15-py3-none-any.whl"}
bilireq = "^0.2.3"
psutil = "^5.9.2"
dynamicrendergrpc = "^1.0.5"
sentry-sdk = "^1.9.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
richuru = "^0.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 96